header box-shadow is behind the hero section --fixed

--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@
 }
 
 body {
-    width: 1920px;
-    margin: 0px auto;
-
     background-color: #FFF;
 }
 
 .container {
-    margin: 0px 75px;
+    margin-left: auto;
+    margin-right: auto;
+
+    width: 1770px;
 }
 
 .section-heading {
@@ -49,7 +49,14 @@ body {
     justify-content: space-between;
     align-items: center;
 
-    box-shadow: 0px 5px 40px 0px rgba(0, 0, 0);
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    position: absolute;
+    left: 0px;
+    right: 0px;
+}
+
+.header__spacer {
+    height: 100px;
 }
 
 .top-nav__list {
